Added a resource ,service and other related api, addition of employee working

--- a/bank-api/src/main/resources/application.properties
+++ b/bank-api/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-
+spring.datasource.url=jdbc:postgresql://localhost:5432/banktrackerdb
+spring.datasource.username=banktracker
+spring.datasource.password=password
